Request parameters validation. new limits parameters introducing
