# src/main/java/io/gnupinguin/nevis/wealthtech/rest/validation/SearchRequestValidator.java
@@ -1,0 +1,9 @@
+package io.gnupinguin.nevis.wealthtech.rest.validation;
+
+import org.jspecify.annotations.Nullable;
+
+public interface SearchRequestValidator {
+
+    void validate(@Nullable String query, int clientLimit, int documentLimit);
+
+}
