# wealth-tech-openapi.yaml
@@ -129,6 +129,24 @@ paths:
           required: true
           schema:
             type: string
+            minLength: 3
+            maxLength: 127
+        - name: clientLimit
+          in: query
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            default: 5
+            maximum: 20
+        - name: documentLimit
+          in: query
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            default: 10
+            maximum: 50
       responses:
         "200":
           description: Search results
@@ -146,17 +164,25 @@ components:
       properties:
         first_name:
           type: string
+          minLength: 1
         last_name:
           type: string
+          minLength: 1
         email:
           type: string
           format: email
+          minLength: 1
         description:
           type: string
         social_links:
           type: array
           items:
-            type: string
+            type: object
+            required: [url]
+            properties:
+              url:
+                type: string
+                minLength: 1
 
     Client:
       type: object
@@ -183,8 +209,10 @@ components:
       properties:
         title:
           type: string
+          minLength: 1
         content:
           type: string
+          minLength: 1
 
     Document:
       type: object
